test/data/resolver/valid/parameter_clause_slot_limit.cypher
MATCH (p:Person) RETURN p.name LIMIT $n
