test/data/resolver/invalid/unknown_property.cypher
MATCH (p:Person) RETURN p.notAProperty
